--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "^2.1.3",
     "auth0-js": "^9.6.1",
-    "com-sarriaroman-photoviewer": "^1.1.16",
+    "com-sarriaroman-photoviewer": "^1.1.18",
     "cordova-android": "7.0.0",
     "cordova-browser": "5.0.3",
     "cordova-plugin-advanced-http": "^1.11.1",
@@ -62,7 +62,10 @@
       "cordova-plugin-ionic": {
         "APP_ID": "221e894a",
         "CHANNEL_NAME": "Master",
-        "UPDATE_METHOD": "background"
+        "UPDATE_METHOD": "background",
+        "WARN_DEBUG": "true",
+        "UPDATE_API": "https://api.ionicjs.com",
+        "MAX_STORE": "2"
       },
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
