--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/device": "^4.9.0",
     "@ionic-native/http": "^4.9.0",
     "@ionic-native/in-app-browser": "^4.9.0",
+    "@ionic-native/native-audio": "^4.9.1",
     "@ionic-native/photo-viewer": "^4.9.0",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
@@ -43,6 +44,7 @@
     "cordova-plugin-ionic": "^4.1.7",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
+    "cordova-plugin-nativeaudio": "^3.0.9",
     "cordova-plugin-safariviewcontroller": "^1.5.4",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
@@ -82,7 +84,8 @@
         "ANDROID_PATHPREFIX": "/cordova/br.com.equipepanchomobile/callback"
       },
       "cordova-plugin-inappbrowser": {},
-      "com-sarriaroman-photoviewer": {}
+      "com-sarriaroman-photoviewer": {},
+      "cordova-plugin-nativeaudio": {}
     },
     "platforms": [
       "browser",
