--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@auth0/cordova": "^0.3.0",
     "@ionic-native/core": "4.7.0",
     "@ionic-native/device": "^4.9.0",
+    "@ionic-native/firebase": "^4.9.1",
     "@ionic-native/http": "^4.9.0",
     "@ionic-native/in-app-browser": "^4.9.0",
     "@ionic-native/native-audio": "^4.9.1",
     "@ionic-native/photo-viewer": "^4.9.0",
+    "@ionic-native/push": "^4.9.1",
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/status-bar": "4.7.0",
     "@ionic/pro": "1.0.20",
@@ -40,6 +42,7 @@
     "cordova-plugin-customurlscheme": "^4.3.0",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-file": "^6.0.1",
+    "cordova-plugin-firebase": "^1.0.5",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic": "^4.1.7",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
@@ -85,7 +88,8 @@
       },
       "cordova-plugin-inappbrowser": {},
       "com-sarriaroman-photoviewer": {},
-      "cordova-plugin-nativeaudio": {}
+      "cordova-plugin-nativeaudio": {},
+      "cordova-plugin-firebase": {}
     },
     "platforms": [
       "browser",
