--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "cordova-plugin-file": "^6.0.1",
     "cordova-plugin-firebase": "^1.0.5",
     "cordova-plugin-inappbrowser": "^3.0.0",
-    "cordova-plugin-ionic": "^4.1.7",
+    "cordova-plugin-ionic": "^4.2.0",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
-    "cordova-plugin-ionic-webview": "^1.2.1",
+    "cordova-plugin-ionic-webview": "^2.0.0",
     "cordova-plugin-nativeaudio": "^3.0.9",
     "cordova-plugin-safariviewcontroller": "^1.5.4",
     "cordova-plugin-splashscreen": "^5.0.2",
@@ -71,7 +71,9 @@
         "UPDATE_METHOD": "background",
         "WARN_DEBUG": "true",
         "UPDATE_API": "https://api.ionicjs.com",
-        "MAX_STORE": "2"
+        "MAX_STORE": "2",
+        "ROLLBACK_TIMEOUT": "10",
+        "MIN_BACKGROUND_DURATION": "30"
       },
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
